--- a/ChangeLog
+++ b/ChangeLog
@@ -4,19 +4,62 @@
 <meta name="author" content="Henning Schulzrinne">
 <meta name="keywords" content="RTP; rtptools">
 <title>RTP tools change history</title>
+<style type="text/css">
+ dt {
+   margin-top: 1em;
+   font-weight: bold; 
+ }
+</style>
 </head>
 
 <body bgcolor="#38B0DE">
 <h1><a href="rtptools.html">RTP tools</a> change history</h1>
 
 <dl>
-<p><dt>1.17 (April 2001)
+<dt>1.18 (September 2002)
+<dd>Changes made by Akira Tsukamoto unless otherwise noted.
+<ul>
+
+<li>Check for errors when resolving host name.
+
+<li>For rtpdump, <tt>-F hex</tt>, <tt>-F rtcp</tt>, format fix.
+
+<li>Update IANA payload types in rtpdump.
+
+<li>Avoid allocating 8000 bytes buffer, copying and
+destroying it every iteration.
+
+<li>For bark.rtp, add RTCP packet, so the RAT could successfully receive
+and play.  Originally, it was only containing RTP payload.
+
+<li>Large ts and ssrc values would overflow; replaced <tt>strtol()</tt> with
+<tt>strtoul()</tt>.
+
+<li>Fixed out of range timeval, which led a spike on jitter in rare case.
+
+<li>Fixed CPU 100% utilization problem for <tt>rtptrans</tt> (both Unix
+and win32) <tt>rtpplay</tt>, <tt>rtpsend</tt> (only win32)
+
+<li>Fixed broken compilation on Win32.
+
+<li>For Win32, modified to use hi-resolution counter (win32 API) for
+<tt>gettimeodday()</tt> from <tt>ftime()</tt>.  It was creating a large
+jitter.
+
+<li>For <tt>rtpplay</tt>, add <samp>-s</samp> flag to allow setting
+source port of packets. (Ping Pan and Akira Tsukamoto)
+
+<li>Bug fix that actually adds <samp>-o</samp> flag to rtpdump command line. 
+(David Allouche)
+</ul>
+
+<dt>1.17 (April 2001)
 <dd>Added <samp>-o</samp> option to <tt>rtpdump</tt>, so that output can
 be directed to a file.  This is necessary so that the file can be opened
 in binary mode.  Also configured stdout on Win32 for binary mode,
 disabling the typical \n to \n\r translation.  (hgs)
 
-<p><dt>1.16 (July 2000)
+<dt>1.16 (July 2000)
 <dd>
 <ul>
 <li>For <tt>rtpsend</tt>, add <samp>-s</samp> flag to allow setting
@@ -28,7 +71,7 @@ Pan)
 <li>Compile fixes for Linux. (Jori)
 </ul>
 
-<p><dt>1.15 (March 2000)
+<dt>1.15 (March 2000)
 <dd>
 <ul>
 <li>For <tt>rtpsend</tt>, in function <tt>rtpsend()</tt>, added support
@@ -61,14 +104,14 @@ invalid input is found rather than trying to soldier on.
 
 </ul>
 
-<p><dt>1.14 (October 1999)
+<dt>1.14 (October 1999)
 <dd>
 <ul>
 <li>Various portability fixes; now tested to compile on Solaris 2.6,
 Linux 2.2.10, FreeBSD 2.2.7, and FreeBSD 3.3. (Jonathan Lennox)
 </ul>
 
-<p><dt>1.13 (August 1999)
+<dt>1.13 (August 1999)
 <dd>
 <ul>
 <li>Change to autoconf format [<a href="mailto:pere@hungry.com">Petter
@@ -93,7 +136,7 @@ packet.p.hdr.plen   = ctrl ? 0 : len;
 href="mailto:jori@lumumba.luc.ac.be">Jori</a>]
 </ul>
 
-<p><dt>1.11 (January 1999)
+<dt>1.11 (January 1999)
 <dd>
 <ul>
 <li>Marc Eaddy found that MSVC++ 5.0 only works if seq is declared
@@ -106,7 +149,7 @@ Reinholdtsen</a>
 
 </ul>
 
-<p><dt>1.10 (March 1998)
+<dt>1.10 (March 1998)
 <dd>
 <ul>
 <li>Bill Fenner:  "I've been experimenting with real short clips, and
@@ -129,7 +172,7 @@ a selected portion of the file.
 the preceding RTCP packet.
 </ul>
 
-<p><dt>1.9 (August 1997)
+<dt>1.9 (August 1997)
 <dd>
 <ul>
 <li><tt>rtptrans</tt> also has non-sendmsg ifdef for Linux and similarly
@@ -152,13 +195,13 @@ be identical).
 numbers.
 </ul>
 
-<p><dt>1.8 (July 1997)
+<dt>1.8 (July 1997)
 <dd>
 <ul>
 <li>Bug in parsing of RR fixed.
 </ul>
 
-<p><dt>1.6 (October 1996)
+<dt>1.6 (October 1996)
 <dd>
 
 <ul>
@@ -176,7 +219,7 @@ RTP/RTCP and media headers are logged.
 <li>Fixed: random address information in header.
 </ul>
 
-<p><dt>1.0 (December 1995)
+<dt>1.0 (December 1995)
 
 <dd>
 <ul>
@@ -192,9 +235,12 @@ RTCP packets right now.
 </dl>
 
 <hr>
-<p>Last modified 1997-08-08 by <a
-href="http://www.cs.columbia.edu/~hgs/">Henning Schulzrinne</a><br> <a
-href=mailto:schulzrinne@cs.columbia.edu">schulzrinne@cs.columbia.edu</a>
+<small>Last updated 
+<script type="text/JavaScript">
+document.write(document.lastModified)
+</script>
+by <a href="http://www.cs.columbia.edu/~hgs">Henning Schulzrinne</a>
+</small>
 
 </body>
 </html>
