Dorgham Sisalem's email address

--- a/rtptrans.1
+++ b/rtptrans.1
@@ -58,6 +58,6 @@ should be able to use both VAT and RTP.
 was written by
 .An Henning Schulzrinne Aq Mt hgs@cs.columbia.edu ,
 with enhancements by
-.An Dorgham Sisalem
+.An Dorgham Sisalem Aq Mt sisalem@iptel.org
 and
 .An Steve Casner .
