manpages: sync AUTHORS with homepage

--- a/rtpplay.1
+++ b/rtpplay.1
@@ -112,6 +112,8 @@ operates silently.
 was written by
 .An Henning Schulzrinne Aq Mt hgs@cs.columbia.edu ,
 with enhancements by
-.An Ping Pan
+.An Ping Pan ,
+.An Akira Tsukamoto Aq Mt akira.tsukamoto@gmail.com ,
+.An Jan Stary Aq Mt hans@stare.cz ,
 and
-.An Akira Tsukamoto Aq Mt akira.tsukamoto@gmail.com .
+.An Jan Janak Aq Mt janakj@cs.columbia.edu .
