--- a/rtptrans.1
+++ b/rtptrans.1
@@ -69,4 +69,4 @@ was written by
 with enhancements by
 .An Dorgham Sisalem Aq Mt sisalem@iptel.org
 and
-.An Steve Casner .
+.An Steve Casner Aq Mt casner@precept.com .
