--- a/rtpdump.1
+++ b/rtpdump.1
@@ -209,6 +209,8 @@ $ rtpdump -F short /1234
 was written by
 .An Henning Schulzrinne Aq Mt hgs@cs.columbia.edu ,
 with enhancements by
-.An Ping Pan
+.An Ping Pan ,
+.An Akira Tsukamoto Aq Mt akira.tsukamoto@gmail.com ,
+.An Jan Stary Aq Mt hans@stare.cz ,
 and
-.An Akira Tsukamoto Aq Mt akira.tsukamoto@gmail.com .
+.An Jan Janak Aq Mt janakj@cs.columbia.edu .
